--- a/index.html
+++ b/index.html
@@ -11,13 +11,27 @@
 <body>
     <header>
         <nav id="navbar">
-            <h1 class="logo"><a href="index.html"> HK</a></h1>
-            <ul>
-                <li><a href="index.html" class="current">Home</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Contact</a></li>
-            </ul>
+            <div class="container">
+                <h1 class="logo"><a href="index.html"> HK</a></h1>
+                <ul>
+                    <li><a href="index.html" class="current">Home</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Contact</a></li>
+                </ul>
+            </div>
         </nav>
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1> <span class="text-primary"> Enjoy</span> your day</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum illum quam error suscipit doloremque. Veniam.</p>
+                    <a href="about.html" class="btn">About Our Hotel</a>
+                </div>
+            </div>
+        </div>
     </header>
+    <section id="home-info" class="bg-dark">
+        
+    </section>
 </body>
 </html>
