--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="logo"><a href="index.html"> HK</a></h1>
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
-                    <li><a href="index.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="index.html">Contact</a></li>
                 </ul>
             </div>
@@ -33,5 +33,11 @@
     <section id="home-info" class="bg-dark">
         
     </section>
+    <div class="clr"></div>
+
+    
+    <footer id="main-footer">
+        <p>Copyright &copy;: HK 2020 </p>
+    </footer>
 </body>
 </html>
