--- a/about.html
+++ b/about.html
@@ -7,13 +7,14 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston Massachusetts">
   <meta name="keywords" content="hotel,boston hotel,new england hotel">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet"  media="screen and (max-width: 768px)" href="css/mobile.css">
   <title>Hotel BT | About</title>
 </head>
 <body>
   <header>
     <nav id="navbar">
       <div class="container">
-        <h1 class="logo"><a href="index.html">HBT</a></h1>
+        <h1 class="logo"><a href="index.html">HK</a></h1>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="current" href="about.html">About</a></li>
@@ -26,7 +27,7 @@
   <section id="about-info" class="bg-light py-3">
     <div class="container">
       <div class="info-left">
-        <h1 class="l-heading"><span class="text-primary">About</span> Hotel BT</h1>
+        <h1 class="l-heading"><span class="text-primary">About</span> Hotel HK</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem veritatis illo, similique labore voluptate nulla animi dolorum eius laborum illum, nesciunt quod reprehenderit dicta autem vel nobis minima sit deleniti!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A velit voluptatem impedit voluptate. Doloribus, voluptas dolore! Cupiditate aliquid sequi deserunt.</p>
       </div>
@@ -34,24 +35,27 @@
         <img src="./img/photo-2.jpg" alt="hotel">
       </div>
     </div>
-  </section
+</section>
 
-  <section id="testimonials" class="py-3">
+<section id="testimonials" class="py-3">
     <div class="container">
       <h2 class="l-heading">What Our Guests Say</h2>
       <div class="testimonial bg-primary">
         <img src="./img/person-1.jpg" alt="person-1">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p>
       </div>
+      <div class="clr">
+        <br>
+      </div>
       <div class="testimonial bg-primary">
           <img src="./img/person-2.jpg" alt="person-2">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eligendi quibusdam, dolorum maxime cum numquam quisquam, deleniti eum incidunt, velit non consectetur. Facere, ipsa maxime, ullam id amet odio laboriosam sit iusto tempore fugit exercitationem, a dolore quo maiores nisi!</p>
     </div>
     </div>
-  </section>
+</section>
 
   <footer>
-    <p>Hotel BT &copy; 2019, All RIghts Reserved</p>
+    <p>Copyright &copy;: HK 2020 </p>
   </footer>
 </body>
 </html>
